[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "importmonkey"
description = "Utility for adding new import paths."
authors = [{name = "Markus Hirsimäki"}]
license = {text = "The Unlicense"}
readme = "readme.md"
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "License :: Public Domain",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = ["build", "twine", "ruff"]

[project.urls]
homepage = "https://github.com/hirsimaki-markus/importmonkey"
issues = "https://github.com/hirsimaki-markus/importmonkey/issues"
license = "https://choosealicense.com/licenses/unlicense/"

[tool.setuptools]
packages = ["importmonkey"]
package-dir = { "" = "src" }
dynamic = { version = {attr = "importmonkey.__version__" } }
