[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "importmonkey"
license = {file = "license.txt"}
description = "Utility for adding new import paths."
readme = "file:../../readme.md"
authors = [{name = "Markus Hirsimäki"}]
urls = {url = "https://github.com/hirsimaki-markus/importmonkey"}
dynamic = ["version"]


[tool.setuptools]
py-modules = ["importmonkey.__init__"]
dynamic = {version = {attr = "importmonkey.__version__"}}

